# notegraf

./: .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  changelog.html  developer.html  index.html  installation.html  print.html  search.html  searchindex.js  searchindex.json  syntax.html  toc.html  toc.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit-daily.yml  audit-on-push.yml  audit.yml  ci.yml  docker.yml  mdbook.yml
docs/: book.toml  design.md
docs/src/: SUMMARY.md  changelog.md  developer.md  installation.md  search.md  syntax.md
notegraf/: Cargo.toml  sqlx-data.json
notegraf-web/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
notegraf-web/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
notegraf-web/src/frontend/: api.tsx  app.css  autosave.tsx  index.html  index.tsx  markdown.tsx  new_note.tsx  note.tsx  note_sequence.tsx  types.ts  util.tsx
notegraf-web/src/frontend/components/: FormSessions.tsx  LazyLinks.tsx  NavBar.tsx  Note.tsx  NoteForm.tsx  NoteFormSession.tsx  NotesTwoPane.tsx  SearchBox.tsx  Tags.tsx
notegraf-web/src/frontend/pages/: App.tsx  NoteEdit.tsx  NoteEditSessions.tsx  NoteNew.tsx  NoteNewSessions.tsx  NoteRevision.tsx  NoteRevisions.tsx  NoteSequence.tsx  NoteTop.tsx  SearchResults.tsx  TagList.tsx  Tags.tsx  index.ts
notegraf-web/src/frontend/routes/: app.tsx  edit_note.tsx  new_note.tsx  note_revisions.tsx  note_sequence.tsx  notes.tsx  search_results.tsx  specific_note.tsx
notegraf-web/src/frontend/utils/: autosave.tsx  datetime.ts  index.tsx  markdown.tsx
notegraf-web/src/routes/: api_v1.rs  index.rs  mod.rs
notegraf-web/tests/: api_v1.rs  gets.rs  health_check.rs
notegraf-web/tests/common/: mod.rs
notegraf/.sqlx/: query-0dba13e5ae77834be905ec25f12343345d09f8c425eaa7fd56e655d4a1399b19.json  query-1736db8057b031c583330340d5d314d78c00021530ab4c80913694fceaf3642d.json  query-1ff367db7a515db2bd68f5f8cb76e35e75c807fba50dd7f8fdefd77e51fbb4c1.json  query-44d12c1355da8f01b014dcd2c6376e8e68ff040a3d8ce5a26e6e50081ecbb610.json  query-5edaa96dc6b5a468028606ec4a90022bbe402028a2560b97c1083c49064fe055.json  query-6d83af4cc4e18c6abcbee0a77e91b7f681136996aa67803cf816fa7390c59575.json  query-993d4cef0950217b0e95ac7ca25fea164768809cf6ffb979543cb9ae58517970.json  query-ae8d495aab9478759badbc14dc00c0834d956ec077f8ad46848a13c8e214ab7e.json  query-ba15c668b3d8f0845e053ea2df8ac688248554b35d8e19d95d94f6c3f8385c8b.json  query-cb07e983a89847fe929c37ecfe696ddb1f7f7f4193e0b29f23ec264abb9b199c.json  query-cc5867c004b986f6323b1ab499b2280ceedc5c951116b24b166e833099d4a036.json  query-f883de81cbcfe22edee8c2fcccd8f86420e0c32baf63a3e529a0e6e8c4d1da80.json
notegraf/migrations/: 20220624130628_create_note_and_revision_table.sql
notegraf/src/: errors.rs  lib.rs  note.rs  notemetadata.rs  url.rs
notegraf/src/notestore/: in_memory.rs  mod.rs  postgresql.rs  search.rs  tests.rs  util.rs
notegraf/src/notestore/postgresql/: mod.rs  queries.rs  tests.rs
notegraf/src/notetype/: markdown.rs  mod.rs  plain.rs
src/: lib.rs  note.rs  notestore.rs  notetype.rs  url.rs
src/notestore/: in_memory.rs  mod.rs
src/notetype/: markdown.rs  mod.rs  plain.rs
