[package]
name = "notegraf-web"
version = "0.1.1"
authors = ["Zixian Cai"]
edition = "2021"
license = "AGPL-3.0-only"
description = "The reference web frontend of Notegraf"
repository = "https://github.com/caizixian/notegraf"
homepage = "https://notegraf.zcai.org"
readme = "README.md"
documentation = "https://docs.rs/notegraf-web"
categories = ["web-programming", "text-processing"]
keywords = ["note-taking"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "notegraf-web"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
config = { version = "0.13", default-features = false, features = ["yaml"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.21"
tracing-actix-web = { version = "0.7.6", features = ["opentelemetry_0_20"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
lazy_static = "1.4"
opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.13"
tokio = { version = "1.32", features = ["macros", "sync", "rt-multi-thread"] }
notegraf = {version = "0.1.1", path = "../notegraf"}
sqlx = { version = "0.7", features = ["postgres"] }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["notetype_markdown"]
notetype_markdown = []
notetype_plain = []
