[package]
name = "notegraf"
version = "0.1.0-alpha.2"
authors = ["Zixian Cai"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Core library for building a graph-oriented notebook"
repository = "https://github.com/caizixian/notegraf"
homepage = "https://github.com/caizixian/notegraf"
readme = "README.md"
documentation = "https://docs.rs/notegraf"
categories = ["data-structures", "text-processing"]
keywords = ["note-taking"]

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
thiserror = "1.0"
pulldown-cmark = "0.9"
url = "2.2"
pulldown-cmark-to-cmark = "10.0"
futures = "0.3"
tokio = { version = "1.19", features = ["sync"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json", "offline"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.19", features = ["macros", "sync", "rt"] }
