[package]
name = "notegraf"
version = "0.1.1"
authors = ["Zixian Cai"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Core library for building a graph-oriented notebook"
repository = "https://github.com/caizixian/notegraf"
homepage = "https://notegraf.zcai.org"
readme = "README.md"
documentation = "https://docs.rs/notegraf"
categories = ["data-structures", "text-processing"]
keywords = ["note-taking"]

[dependencies]
uuid = { version = "1.3", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pulldown-cmark = "0.9"
url = "2.3"
pulldown-cmark-to-cmark = "10.0"
futures = "0.3"
tokio = { version = "1.26", features = ["sync"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json", "offline"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.26", features = ["macros", "sync", "rt"] }
